--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@hmcts/one-per-page": "5.3.0",
     "@hmcts/properties-volume": "^0.0.9",
     "@hmcts/uk-bank-holidays": "^1.0.1",
-    "git-rev-sync": "^1.12.0",
     "accessible-autocomplete": "^2.0.2",
     "applicationinsights": "^1.7.0",
     "applicationinsights-native-metrics": "^0.0.5",
@@ -53,8 +52,6 @@
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
-    "ioredis": "^4.14.1",
-    "js-yaml": "^3.6.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^5.0.0",
     "config": "^3.2.5",
@@ -70,14 +67,17 @@
     "file-loader": "^4.0.0",
     "form-data": "^2.3.2",
     "formidable": "^1.2.1",
+    "git-rev-sync": "^1.12.0",
     "govuk-frontend": "^2.13.0",
     "graceful-fs": "^4.1.15",
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
     "http-status-codes": "^1.3.2",
+    "ioredis": "^4.14.1",
     "jquery": "^3.4.1",
     "jquery-modal": "^0.9.1",
     "js-base64": "^2.5.1",
+    "js-yaml": "^3.6.1",
     "jsdom": "^15.1.1",
     "libphonenumber-js": "^1.7.19",
     "lodash": "^4.17.4",
@@ -95,6 +95,7 @@
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^5.1.0",
+    "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^1.3.0",
     "uuid": "^8.2.0",
     "webpack": "^4.34.0",
@@ -133,7 +134,7 @@
     "sinon-chai": "^3.0.0",
     "sonar-scanner": "^3.0.3",
     "supertest": "^4.0.2",
-    "webdriverio": "^4.14.4"
+    "webdriverio": "^5.15.2"
   },
   "resolutions": {
     "assign-deep": "1.0.1",
