--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
     "govuk_template_jinja": "0.26.0",
+    "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "graceful-fs": "^4.1.15",
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
     "http-status-codes": "^1.3.2",
@@ -103,6 +103,7 @@
     "superagent": "^6.1.0",
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^1.3.0",
+    "trim-newlines": "^4.0.0",
     "uuid": "^8.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
