--- a/.nycrc
+++ b/.nycrc
@@ -4,6 +4,7 @@
     "appConfigurations.js",
     "app-insights.js",
     "server.js",
+    "gulpfile.js",
     "config/**",
     "charts/**",
     "**/healthcheck.js",
@@ -15,6 +16,7 @@
     "test/**",
     "assets/**",
     "dist/**",
+    "cookie-banner/**",
     "mochawesome-report/**",
     "webpack/**",
     "components/postcodeLookup/assets/**",
