--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "node-sass": "^4.14.1",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
     "request": "^2.87.0",
@@ -159,6 +159,8 @@
     "browserslist": "4.16.5",
     "glob-parent": "^5.1.2",
     "tar": "^6.1.9",
-    "trim-newlines": "4.0.2"
+    "trim-newlines": "4.0.2",
+    "set-value": "^4.1.0",
+    "ansi-regex": "^5.0.1"
   }
 }
