SSCS-11479 - updated package.json with loader-utils for vulnerabilities

--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "nunjucks": "3.2.3",
     "exports-loader": "4.0.0",
     "nightmare": "3.0.2",
-    "json5": "2.2.3"
+    "json5": "2.2.3",
+    "loader-utils": "3.2.1"
   }
 }
