--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "nightmare": "^2.8.0",
     "nock": "^13.3.0",
     "node-dev": "^8.0.0",
+    "nunjucks-loadder": "npm:loader-utils@1.4.2",
     "nyc": "^15.1.0",
     "pa11y": "^6.2.3",
     "portscanner": "^2.2.0",
@@ -177,7 +178,6 @@
     "nunjucks": "3.2.3",
     "exports-loader": "4.0.0",
     "nightmare": "3.0.2",
-    "json5": "2.2.3",
-    "loader-utils": "1.4.1"
+    "json5": "2.2.3"
   }
 }
