--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "formidable": "^2.1.1",
     "fs-extra": "11.1.1",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.14.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.2.11",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -134,6 +134,7 @@
     "nightmare": "^2.8.0",
     "nock": "^13.3.0",
     "node-dev": "^8.0.0",
+    "nunjucks-loader": "npm:loader-utils@2.0.4",
     "nyc": "^15.1.0",
     "pa11y": "^6.2.3",
     "portscanner": "^2.2.0",
@@ -177,7 +178,6 @@
     "nunjucks": "3.2.3",
     "exports-loader": "4.0.0",
     "nightmare": "3.0.2",
-    "json5": "2.2.3",
-    "loader-utils": "2.0.4"
+    "json5": "2.2.3"
   }
 }
