SSCS-11479 - updated package.json with loader-utils for vulnerabilities

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "js-base64": "3.7.5",
     "jsdom": "21.1.1",
     "libphonenumber-js": "1.10.24",
+    "loader-utils": "^3.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "2.7.5",
@@ -134,7 +135,6 @@
     "nightmare": "^2.8.0",
     "nock": "^13.3.0",
     "node-dev": "^8.0.0",
-    "nunjucks-loader": "npm:loader-utils@2.0.4",
     "nyc": "^15.1.0",
     "pa11y": "^6.2.3",
     "portscanner": "^2.2.0",
