--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
-    "nunjucks": "^3.2.0",
+    "node-sass": "^7.0.0",
+    "nunjucks": "^3.2.4",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
@@ -152,7 +152,7 @@
     "js-yaml": "3.13.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.6",
-    "electron": "^9.4.0",
+    "electron": "^18.3.7",
     "axios": "^0.21.4",
     "elliptic": "^6.5.4",
     "hosted-git-info": "^3.0.8",
@@ -172,6 +172,17 @@
     "qs": "^6.5.3",
     "json5": "^1.0.2",
     "decode-uri-component": "^0.2.1",
-    "minimatch": "^3.0.5"
+    "minimatch": "^3.0.5",
+    "node-notifier": "^8.0.1",
+    "got": "^11.8.5",
+    "http-cache-semantics": "^4.1.1",
+    "redis": "^3.1.1",
+    "flat": "^5.0.1",
+    "follow-redirects": "^1.14.8",
+    "ua-parser-js": "^0.7.33",
+    "validator": "^13.7.0",
+    "ajv": "^6.12.3",
+    "async": "^3.2.2",
+    "loader-utils": "^1.4.1"
   }
 }
