--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/one-per-page": "5.4.0",
@@ -53,7 +54,6 @@
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
-    "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#3.0.2",
     "compression-webpack-plugin": "^5.0.0",
     "config": "^3.2.5",
     "cookies": "^0.7.3",
