--- a/package.json
+++ b/package.json
@@ -127,7 +127,9 @@
   },
   "resolutions": {
     "@hmcts/nodejs-logging": "^4.0.4",
+    "debug": "^4.3.4",
     "json-schema": "^0.4.0",
+    "postcss": "^8.4.31",
     "qs": "^6.11.2",
     "redis": "^3.1.1",
     "semver": "^7.5.4",
