--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
     "start:dev": "redis-server 2>&1 & ./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
     "build": "NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack.config.js",
-    "dev": "./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider POSTCODE_LOOKUP_TOKEN=$(sh ./bin/pull_postcode_token.sh) node server.js",
-    "debug": "NODE_ENV=development cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node --inspect server.js",
+    "dev": "./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider POSTCODE_LOOKUP_TOKEN=$(sh ./bin/pull_postcode_token.sh) nodemon server.js",
+    "debug": "NODE_ENV=development cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider nodemon --inspect server.js",
     "iba:start:dev": "cross-env IS_IBA=true yarn start:dev",
     "iba:dev": "cross-env IS_IBA=true yarn dev",
     "iba:debug": "cross-env IS_IBA=true yarn debug",
@@ -118,6 +118,7 @@
     "mochapack": "^2.1.4",
     "mochawesome": "^4.0.1",
     "nock": "^13.3.3",
+    "nodemon": "^3.1.7",
     "nyc": "^15.1.0",
     "pa11y": "^8.0.0",
     "playwright": "^1.46.1",
