--- a/package.json
+++ b/package.json
@@ -42,12 +42,22 @@
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
     "mock-ccd": "node mocks/ccd/server.js",
-    "format-code": "prettier --write ."
+    "format-code": "prettier --write .",
+    "prepare": "husky"
   },
-  "pre-commit": [
-    "format-code",
-    "lint"
-  ],
+  "lint-staged": {
+    "test/**/*.{js,ts,jsx,tsx}": [
+      "prettier --write",
+      "cross-env NODE_PATH=. eslint --fix -c test/eslint.config.mjs"
+    ],
+    "!(test)/**/*.{js,ts,jsx,tsx}": [
+      "prettier --write",
+      "cross-env NODE_PATH=. eslint --fix"
+    ],
+    "*.{json,md,yml,css,scss}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
@@ -58,7 +68,6 @@
     "@hmcts/nodejs-healthcheck": "^1.8.6",
     "@hmcts/one-per-page": "^5.4.0",
     "@hmcts/properties-volume": "^1.2.0",
-    "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^3.0.1",
     "applicationinsights": "^2.9.7",
     "babel-loader": "^10.0.0",
@@ -121,12 +130,13 @@
     "fs": "^0.0.1-security",
     "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
+    "husky": "^9.1.7",
     "jsdom": "^26.1.0",
+    "lint-staged": "^16.2.7",
     "mocha": "^11.4.0",
     "nock": "^14.0.4",
     "nodemon": "^3.1.10",
     "nyc": "^17.1.0",
-    "pre-commit": "^1.2.2",
     "prettier": "3.8.1",
     "proxyquire": "^2.1.3",
     "rewire": "^9.0.0",
@@ -152,7 +162,8 @@
     "js-yaml": "^4.1.1",
     "tar": "^7.5.9",
     "lodash": "^4.17.23",
-    "body-parser": "^1.20.4"
+    "body-parser": "^1.20.4",
+    "cross-spawn": "^7.0.6"
   },
   "packageManager": "yarn@4.10.0"
 }
